Lox/Lox EBNF.txt
program        ::= declaration* EOF 

declaration    ::= varDecl | statement 

varDecl        ::= "var" IDENTIFIER ( "=" expression )? ";" 

statement      ::= exprStmt
               | forStmt
               | ifStmt
               | printStmt
               | whileStmt
               | block 

exprStmt       ::= expression ";"
forStmt        ::= "for" "(" ( varDecl | exprStmt | ";" )
                           expression? ";"
                           expression? ")" statement 
ifStmt         ::= "if" "(" expression ")" statement
                 ( "else" statement )? 
printStmt      ::= "print" expression ";" 
whileStmt      ::= "while" "(" expression ")" statement
block          ::= "{" declaration* "}"

expression     ::= assignment

assignment     ::= IDENTIFIER "=" assignment
               | logic_or

logic_or       ::= logic_and ( "or" logic_and )*
logic_and      ::= equality ( "and" equality )*
equality       ::= comparison ( ( "!=" | "==" ) comparison )*
comparison     ::= term ( ( ">" | ">=" | "<" | "<=" ) term )*
term           ::= factor ( ( "-" | "+" ) factor )*
factor         ::= unary ( ( "/" | "*" ) unary )*
unary          ::= ( "!" | "-" ) unary
primary        ::= "true" | "false" | "nil"
               | NUMBER | STRING | IDENTIFIER | "(" expression ")"

NUMBER         ::= DIGIT+ ( "." DIGIT+ )?
STRING         ::= '"' (any char except '"')* '"'
IDENTIFIER     ::= ALPHA ( ALPHA | DIGIT )*
ALPHA          ::= [a-zA-Z]
DIGIT          ::= [0-9]
